# alyra-ai-ml

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  MEMORY.md  README.md  Taskfile.yml  predict.py  pyproject.toml  train_model.py
.claude/commands/: commit.md
.github/workflows/: ci.yml  tests.yml
data/: categorical_mappings.json
models/: dropout_predictor.pkl
notebooks/: dataset_description.md  eda.ipynb  eda_minimal.ipynb  schemas.py  tools.py  visualization_utils.py
src/alyra_ai_ml/: __init__.py  constants.py  features.py  schemas.py
src/alyra_ai_ml/api/: __init__.py  main.py  routes.py  schemas.py
src/alyra_ai_ml/cli/: __init__.py  main.py
src/alyra_ai_ml/data/: __init__.py  loader.py
src/alyra_ai_ml/models/: __init__.py  prediction.py  training.py
tests/: __init__.py  conftest.py  test_api.py  test_loader.py  test_predict.py  test_schemas.py  test_train_model.py
