[project]
name = "alyra-ai-ml"
version = "0.1.0"
description = "Projet de développement IA - Formation Alyra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fanalysis>=0.0.1",
    "fastapi>=0.115.0",
    "joblib>=1.4.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "typer>=0.15.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
alyra-ml = "alyra_ai_ml.cli.main:app"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipython>=9.7.0",
    "isort>=7.0.0",
    "nbqa>=1.9.1",
    "pandas-stubs>=2.3.2.250926",
    "plotly>=6.5.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "ruff>=0.14.7",
    "scipy-stubs>=1.16.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alyra_ai_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ['-v']