[project]
name = "alyra-ai-ml"
version = "0.1.0"
description = "Projet de développement IA - Formation Alyra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.4.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pandera>=0.27.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=2.1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipython>=9.7.0",
    "isort>=7.0.0",
    "nbconvert>=7.16.6",
    "nbqa>=1.9.1",
    "pandas-stubs>=2.3.2.250926",
    "plotly>=6.5.0",
    "pre-commit>=4.5.0",
    "pytest>=8.0.0",
    "ruff>=0.14.7",
    "scipy-stubs>=1.16.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alyra_ai_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ['-v']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # Line too long (handled by formatter for notebooks)
    "B905",  # zip() without explicit strict parameter
    "B007",  # Loop control variable not used within loop body
]

[tool.ruff.lint.isort]
known-first-party = ["alyra_ai_ml"]
force-single-line = false
lines-after-imports = 2

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["alyra_ai_ml"]
skip_gitignore = true
force_single_line = false
lines_after_imports = 2
